# PyRIGS

./: .codeclimate.yml  .coveragerc  .dockerignore  .editorconfig  .gitignore  .slugignore  .travis.yml  Dockerfile  LICENSE  Pipfile  Procfile  README.md  Vagrantfile  admin.py  app.json  bower.json  compose.yml  conftest.py  db.sqlite3  ember-cli-build.js  forms.py  gulpfile.js  importer.py  manage.py  models.py  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  temp.py  urls.py  views.py  wercker.yml
.circleci/: config.yml
DiscourseAuth/: admin.py  models.py  urls.py  views.py
PyRIGS/: decorators.py  settings.py  urls.py  views.py  wsgi.py
RIGS/: __init__.py  admin.py  apps.py  finance.py  forms.py  hs.py  ical.py  importer.py  importer_tests.py  models.py  regbackend.py  rigboard.py  signals.py  test_functional.py  test_models.py  test_unit.py  urls.py  utils.py  validators.py  versioning.py  views.py
app/: index.html  router.js
assets/: __init__.py  admin.py  api.py  apps.py  converters.py  filters.py  forms.py  models.py  signals.py  testing.py  urls.py  views.py
config/: environment.js  vagrant.yml
forms/: admin.py  models.py  test_models.py
migrations/: 0003_auto_20180301_1700.py  0004_auto_20180301_1711.py
rigForms/: admin.py  models.py  test_models.py  urls.py  views.py
subhire/: admin.py  models.py
telegram_interface/: models.py
templates/: 400.html  401.html  403.html  404.html  500.html  admin_associate_merge.html  analytics.html  asset_detail.html  asset_form.html  asset_list.html  asset_list_table_body.html  asset_update.html  base.html  base_ajax.html  base_ajax_nomodal.html  base_assets.html  base_client.html  base_client_email.html  base_embed.html  base_ember.html  base_rigs.html  bootstrap.html  button.html  closemodal.html  form_errors.html  index.html  (+11 more)
(+848 files in other folders)
