[project]
name = "pyrigs"
version = "0.1.0"
description = "A Django-based event booking system designed for use by TEC PA and Lighting"
readme = "README.md"
requires-python = "~=3.10.0"
dependencies = [
    "ansicolors",
    "asgiref",
    "beautifulsoup4",
    "Brotli",
    "cachetools",
    "chardet",
    "configparser",
    "contextlib2",
    "cssselect",
    "cssutils",
    "dj-database-url",
    "dj-static",
    "Django~=5.2",
    "django-filter",
    "django-ical",
    "django-recurrence",
    "django-registration-redux",
    "django-reversion",
    "django-widget-tweaks",
    "django-htmlmin",
    "envparse",
    "gunicorn",
    "icalendar",
    "idna",
    "Markdown",
    "msgpack",
    "pep517",
    "Pillow",
    "premailer",
    "progress",
    "psutil",
    "psycopg2-binary",
    "Pygments",
    "pyparsing",
    "PyPDF2",
    "pytoml",
    "pytz",
    "reportlab",
    "retrying",
    "simplejson",
    "soupsieve",
    "sqlparse",
    "static3",
    "svg2rlg",
    "tornado",
    "urllib3",
    "whitenoise",
    "yolk",
    "zipp",
    "zope.component",
    "zope.deferredimport",
    "zope.deprecation",
    "zope.event",
    "zope.hookable",
    "zope.proxy",
    "zope.schema",
    "sentry-sdk",
    "diff-match-patch",
    "python-barcode",
    "django-hCaptcha",
    "django-hcaptcha",
    "z3c.rml",
    "pikepdf",
    "django-queryable-properties",
    "django-mass-edit",
    "selenium",
    "zope.interface",
]

[dependency-groups]
dev = [
    "PyPOM",
    "pycodestyle",
    "coveralls",
    "django-coverage-plugin",
    "pytest-cov",
    "pytest-django",
    "pluggy~=1.2.0",
    "pytest-splinter",
    "pytest",
    "pytest-reverse",
    "pytest-xdist[psutil]",
    "PyPOM[splinter]",
    "autopep8>=2.3.2",
]
